Corrects absolute paths in mission-control

--- a/www/mission-control.html
+++ b/www/mission-control.html
@@ -18,9 +18,9 @@
 	<script src="blockly/blocks_compressed.js"></script>
 	<script src="blockly/appengine/storage.js"></script>
 	<script src="blockly/msg/js/en.js"></script>
-	<script src="/blockly/javascript_compressed.js"></script>
-	<script src="/blockly/generators/javascript/motors.js"></script>
-	<script src="/blockly/blocks/motors.js"></script>
+	<script src="blockly/javascript_compressed.js"></script>
+	<script src="blockly/generators/javascript/motors.js"></script>
+	<script src="blockly/blocks/motors.js"></script>
 	<script src="JS-Interpreter/acorn_interpreter.js"></script>
 	<link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
