--- a/www/mission-control.html
+++ b/www/mission-control.html
@@ -51,13 +51,22 @@
 				        <li><a href="#" id="downloadLink">Download This Design</a></li>
 				    </ul>
                 </li>
-			    <li><a href="#">>> Design is Saved</a></li>
+                <li><a href="#"><i class='fi-check'></i> Design is Saved</a></li>
 			</ul>
 			<!-- Right Nav Section -->
 			<ul class="right">
-                <li><a style="background-color:#F04124; font-size:400%; box-shadow: 2px 2px 2px #7A7A7A; position:relative; z-index:999" href="#" onclick="return runCode()"><i class='fi-play'></i></a></li>
-                <li><a style="background-color:#008CBA; font-size:350%" href="#" onclick="return stepCode()"><i class='fi-arrow-right'></i></a></li>
-                <li><a style="background-color:#4DAECF; font-size:350%" href="#" onclick="return updateCode()"><i class='fi-refresh'></i></a></li>
+                <li><a style="background-color:#F04124; font-size:400%; box-shadow: 1px 1px 1px #333333;
+                        position:relative; z-index:999" href="#" onclick="return runCode()">
+                        <i class='fi-play'></i></a></li>
+                <li><a style="background-color:#43AC6A; font-size:350%; box-shadow: 1px 1px 1px #333333;
+                        position:relative; z-index:998" href="#" onclick="return stepCode()">
+                        <i class='fi-arrow-right'></i></a></li>
+                <li><a style="background-color:#008CBA; font-size:350%; box-shadow: 1px 1px 1px #333333;
+                        position:relative; z-index:998" href="#" onclick="runningEnabled=false">
+                        <i class='fi-pause'></i></a></li>
+                <li><a style="background-color:#4DAECF; font-size:350%; box-shadow: 1px 1px 1px #333333;
+                        position:relative; z-index:998" href="#" onclick="return updateCode()">
+                        <i class='fi-refresh'></i></a></li>
 			  <li class="divider"></li>
 			  <li><a href="video-stream.html">Open Video Feed</a></li>
 			  <li><a href="#" id="sidebarButton" style="background-color:#000000" onclick="return toggleSidebar()">Sidebar</a></li>
@@ -134,6 +143,7 @@
 
 	<script>
 		var sidebarVisible = true;
+        var runningEnabled = false;
 		designName = "Unnamed_Design_" + (Math.floor(Math.random()*1000)).toString();
 		$('a#designNameArea').text(designName);
         var highlightPause = false;
@@ -143,6 +153,36 @@
 			{toolbox: document.getElementById('toolbox'), css: false});
 		workspace.addChangeListener(updateCode);
 		workspace.addChangeListener(saveDesign);
+
+        document.onkeydown = keyEvent;
+        function keyEvent(e) {
+            var evtobj = window.event ? event : e;
+            //Ctrl-Shift-7 to run code
+            if (evtobj.keyCode == 55 && evtobj.ctrlKey && evtobj.shiftKey)
+            {
+                console.log("Running code");
+                runCode();
+            }
+            //Ctrl-Shift-8 to stop code
+            if (evtobj.keyCode == 56 && evtobj.ctrlKey && evtobj.shiftKey)
+            {
+                console.log("Stopping code");
+                runningEnabled = false;
+            }
+            //Ctrl-Shift-9 to step code
+            if (evtobj.keyCode == 57 && evtobj.ctrlKey && evtobj.shiftKey)
+            {
+                console.log("Stepping code");
+                stepCode();
+            }
+            //Ctrl-Shift-0 to reset code
+            if (evtobj.keyCode == 48 && evtobj.ctrlKey && evtobj.shiftKey)
+            {
+                console.log("Resetting code");
+                updateCode();
+            }
+        }
+
 	  	var onresize = function(e) {
 			var element = blocklyArea;
 			var x = 0;
@@ -156,7 +196,6 @@
 			blocklyDiv.style.top = y + 'px';
 			blocklyDiv.style.width = blocklyArea.offsetWidth + 'px';
 			blocklyDiv.style.height = blocklyArea.offsetHeight + 'px';
-
 	  	};
 	  	window.addEventListener('resize', onresize, false);
 	  	onresize();
@@ -243,6 +282,7 @@
             highlightPause = false;
             workspace.traceOn(true);
             workspace.highlightBlock(null);
+            runningEnabled = true;
 		}
 
         function highlightBlock(id) {
@@ -253,7 +293,7 @@
         var stepCount = 0;
 
         function runCode() {
-            if (stepCode()) {
+            if (stepCode() && runningEnabled) {
                 console.log(stepCount++);
                 window.setTimeout(runCode, 50);
             }
