--- a/www/mission-control.html
+++ b/www/mission-control.html
@@ -373,16 +373,18 @@
 			blocks = workspace.getTopBlocks(true);
             for(var i=0; i<blocks.length; i++) {
                 try {
-                    console.log(blocks[i].inputList[0].fieldRow[1].text_);
                     if (blocks[i].inputList[0].fieldRow[1].text_ == functionName) {
-                        errorResult = workspace.toggleBlock(blocks[i].id);
-                        if (errorResult) {
-                            alert("Please empty the function before hiding it.");
-                        }
+						if(blocks[i].childBlocks_.length == 0)
+						{
+                        	workspace.toggleBlock(blocks[i].id);
+						}
+						else
+						{
+                        	alert("Please empty the function before hiding it.");
+						}
                     }
                 }
                 catch(err) {
-                    console.log('Not a function.');
                 }
             }
 		}
